# alamadar

./: FIREBASE_RULES.txt  README.md  analysis.txt  build_error.txt  devices.txt  download_emojis.dart  pubspec.yaml  run_logs.txt  ‫almadar - رمز اختصار.lnk
android/: gradle.properties
android/app/: build.gradle.kts  google-services.json
android/app/src/main/cpp/: CMakeLists.txt  security_guard.cpp
ios/: Podfile
ios/Flutter/: podhelper.rb
ios/Runner/: GoogleService-Info.plist  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart
lib/core/: security_utils.dart  theme.dart
lib/data/: admin_models.dart  entertainment_models.dart  match_models.dart  models.dart
lib/screens/: all_channels_screen.dart  auth_ui_screen.dart  category_screen.dart  chat_settings_screen.dart  country_series_screen.dart  custom_gallery_screen.dart  dynamic_content_list_screen.dart  entertainment_screen.dart  episode_details_screen.dart  fake_calculator_screen.dart  home_screen.dart  home_screen_backup.dart  login_screen.dart  main_screen.dart  maintenance_screen.dart  match_schedule_screen.dart  news_screen.dart  our_world_content_screen.dart  our_world_plus_screen.dart  our_world_screen.dart  our_world_series_details_screen.dart  player_screen.dart  premium_categories_screen.dart  premium_channels_screen.dart  premium_player_screen.dart  profile_screen.dart  section_items_screen.dart  series_details_screen.dart  splash_screen.dart  (+4 more)
linux/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+33 files in other folders)
